# browser-agent

./: .gitignore  pyproject.toml  requirements.txt
scripts/: setup_env.sh
src/: __init__.py  main.py
src/agent/: __init__.py  action_types.py  browser_agent.py  config.py  error_recovery.py  executor.py  state.py
src/agent/multi_step/: dependency_graph.py  enums.py  models.py  multi_step_manager.py  task_executor.py
src/browser/: __init__.py  analyzer.py  manager.py  models.py  selector_generator.py
src/config/: __init__.py  constants.py  settings.py
src/llm/: __init__.py  client.py  decision_parser.py  models.py  prompt_builder.py
src/utils/: __init__.py  logger.py
tests/: test_agent.py  test_analyzer.py  test_browser.py  test_config.py  test_error_recovery.py  test_llm.py  test_multi_step.py
